--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,40 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-app="capcoVideoApp">
+<div class="header">
+  <div role="navigation" class="navigation">
+    <div class="container">
+      <div class="collapse navbar-collapse high-nav" id="js-navbar-collapse">
+        <a href="#/"><h4>home</h4></a>
+        <a ng-href="#/about"><h4>  about</h4></a>
+        <a ng-href=""><h4>  how we work</h4></a>
+        <a ng-href=""><h4>  contact</h4></a>
+      </div>
+    </div>
+  </div>
 
+  <img id="capco-logo" src="images/logo.png">
+
+</div>
+
+<div class="row">
+<div ng-view=""></div>
 <%= yield %>
+</div>
+
+<div class="footer">
+  <div class="container">
+      <i class="fa fa-facebook"></i>
+      <i class="fa fa-instagram"></i>
+      <i class="fa fa-youtube"></i>
+      <i class="fa fa-twitter"></i>
+      <i class="fa fa-linkedin"></i>
+      <i class="fa fa-vimeo"></i>
+  </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-resource.js"></script>
 
 </body>
 </html>
