--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
     </div>
   </div>
 
-  <img id="capco-logo" src="images/logo.png">
+  <%= image_tag "logo.png", :id => "capco-logo" %>
+  <!-- <img id="capco-logo" src="images/logo.png"> -->
 
 </div>
 
