added font and about page

--- a/app/assets/javascripts/controllers/main.js.erb
+++ b/app/assets/javascripts/controllers/main.js.erb
@@ -108,15 +108,15 @@ capcoVideoApp.controller('MainCtrl', function ($scope, $videoService, $sce) {
 			"tags":["sales", "internal"],
 			"description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu consectetur lectus, id porta urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse sit amet nibh vel leo euismod convallis convallis ut erat. Integer purus velit, convallis non vestibulum vel, faucibus vitae felis. Phasellus.",
 			"thumbnail": "../../assets/images/thumbnails/thumb12.jpg"
-	    },
-	    {
-	        "title":"The Dark Knight Falls",
-	        "video_id": 1288,
-	        "code":"http://www.youtube.com/embed/kqF8lcKTLw0",
-			"tags":["client", "internal"],
-			"description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu consectetur lectus, id porta urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse sit amet nibh vel leo euismod convallis convallis ut erat. Integer purus velit, convallis non vestibulum vel, faucibus vitae felis. Phasellus.",
-			"thumbnail": "../../assets/images/thumbnails/thumb13.jpg"
 	    }
+	  //   ,{
+	  //       "title":"The Dark Knight Falls",
+	  //       "video_id": 1288,
+	  //       "code":"http://www.youtube.com/embed/kqF8lcKTLw0",
+			// "tags":["client", "internal"],
+			// "description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu consectetur lectus, id porta urna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse sit amet nibh vel leo euismod convallis convallis ut erat. Integer purus velit, convallis non vestibulum vel, faucibus vitae felis. Phasellus.",
+			// "thumbnail": "../../assets/images/thumbnails/thumb13.jpg"
+	  //   }
 	];
 
 	$scope.trustUrl =function(url){
