--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="collapse navbar-collapse high-nav" id="js-navbar-collapse">
         <a href="#/"><h4>home</h4></a>
-        <a ng-href="#/about"><h4>  about</h4></a>
+        <a ng-href="#/about"><h4>  the team</h4></a>
         <a ng-href=""><h4>  how we work</h4></a>
         <a ng-href=""><h4>  contact</h4></a>
       </div>
