added contact form - non-functional

--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -214,3 +214,37 @@ img.thumbnails:hover {
     border-bottom: 0;
   }
 }
+
+
+/*FORM STYLES*/
+
+div#contact input.standard-input {
+  height: 3.5em;
+  background-color: rgb(225,225,225);
+}
+
+div#contact textarea {
+  background-color: rgb(225,225,225);
+  resize: none;
+}
+/*center align placeholder*/
+
+::-webkit-input-placeholder {
+   text-align: center;
+   line-height: 5em;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   text-align: center;
+   line-height: 5em;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   text-align: center;
+   line-height: 5em;  
+}
+
+:-ms-input-placeholder {  
+   text-align: center; 
+   line-height: 5em;
+}
