--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <a href="#/"><h4>home</h4></a>
         <a ng-href="#/about"><h4>  the team</h4></a>
         <a ng-href=""><h4>  how we work</h4></a>
-        <a ng-href=""><h4>  contact</h4></a>
+        <a ng-href="#/contact"><h4>  contact</h4></a>
       </div>
     </div>
   </div>
