--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -30,6 +30,11 @@ angular
         controller: 'VideoCtrl',
         controllerAs: 'video'
       })
+      .when('/contact', {
+        templateUrl: "<%= asset_path('views/contact.html') %>",
+        controller: 'ContactCtrl',
+        controllerAs: 'contact'
+      })
       .otherwise({
         redirectTo: '/'
       });
