fixed styles and added toggle for filter links

--- a/app/assets/javascripts/views/contact.html
+++ b/app/assets/javascripts/views/contact.html
@@ -24,7 +24,7 @@
 	  <div class="checkbox">
 	    <label><input type="checkbox"> agree to terms and conditions</label>
 	  </div>
-	  <button type="submit" class="btn btn-success">Submit</button>
+	  <button type="submit" class="btn btn-success contact-submit">Submit</button>
 	</form>
 
 
