--- a/app/assets/javascripts/views/main.html
+++ b/app/assets/javascripts/views/main.html
@@ -49,10 +49,18 @@
   
   </span>
 
-  <div style="text-align:center; margin-top:5em;">
-      <a href=""><h3 style="margin:2em; font-size:35px; font-weight: bold;">home</h3></a>
-      <a href=""><h3 style="margin:2em; font-size:35px; font-weight: bold;">explore</h3></a>
-      <a href=""><h3 style="margin:2em; font-size:35px; font-weight: bold;">subscriptions</h3></a>
+  <div id='filters-container' style="text-align:center; margin-top:5em;">
+      <a href="" ng-click="clicked = false"><h3>home</h3></a>
+      <a href="" ng-click="clicked = !clicked"><h3>explore</h3></a>
+      <a href="" ng-click="clicked = false"><h3>subscriptions</h3></a>
+  </div>
+  <div id="sub-filters-container" style="text-align:center; margin-top:2em;" ng-show='clicked'>
+      <a href=""><h4>Funny</h4></a>
+      <a href=""><h4>L&D</h4></a>
+      <a href=""><h4>Town Hall</h4></a>
+      <a href=""><h4>CEO Weekly</h4></a>  
+      <a href=""><h4>IWD</h4></a>
+      <a href=""><h4>Connect</h4></a>
   </div>
 
   <div style='margin-left:20px' class="row">
