--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -1,6 +1,10 @@
 @font-face {
   font-family: TungstenMedium;
-  src:url( "<%= asset_path 'Tungsten-Medium.otf' %>")
+  src:url( "<%= asset_path 'fonts/Tungsten-Medium.otf' %>")
+}
+@font-face {
+  font-family: TungstenSemibold;
+  src:url( "<%= asset_path 'fonts/Tungsten-Semibold.otf' %>")
 }
 
 .browsehappy {
@@ -13,16 +17,27 @@
 body {
   padding: 0;
   color: #575757;
-  font-family: 'TungstenMedium';
 }
 
 body p {
   font-size: 16px;
   display: inline;
+  font-family: 'TungstenMedium';
+
 }
 
-h3{
+div#filters-container h3 {
   display: inline;
+  margin: 2em;
+  font-size:35px; 
+  font-weight: bold;
+}
+
+div#sub-filters-container h4 {
+  display: inline;
+  margin:2em; 
+  font-size:25px; 
+  font-weight: bold;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -31,6 +46,11 @@ h3{
 .footer {
   padding-left: 15px;
   padding-right: 15px;
+  font-family: 'TungstenMedium'
+}
+
+.container {
+  font-family: 'TungstenMedium';
 }
 
 /* Main Page */
@@ -217,6 +237,11 @@ img.thumbnails:hover {
 
 
 /*FORM STYLES*/
+div#contact {
+  margin-top: 4em;
+  font-family: "TungstenMedium";
+  font-size: 1.5em;
+}
 
 div#contact input.standard-input {
   height: 3.5em;
@@ -226,6 +251,13 @@ div#contact input.standard-input {
 div#contact textarea {
   background-color: rgb(225,225,225);
   resize: none;
+}
+
+button.contact-submit {
+  width: 20%;
+  /*font-family: "TungstenMedium";*/
+  margin-bottom: 5em;
+  font-size: 1em;
 }
 /*center align placeholder*/
 
