basic on click filtering added

--- a/app/assets/javascripts/views/main.html
+++ b/app/assets/javascripts/views/main.html
@@ -50,22 +50,24 @@
   </span>
 
   <div id='filters-container' style="text-align:center; margin-top:5em;">
-      <a href="" ng-click="clicked = false"><h3>home</h3></a>
-      <a href="" ng-click="clicked = !clicked"><h3>explore</h3></a>
-      <a href="" ng-click="clicked = false"><h3>subscriptions</h3></a>
+      <a href="" ng-click="clickedExplore = false"><h3>home</h3></a>
+      <a href="" ng-click="clickedExplore = !clickedExplore"><h3>explore</h3></a>
+      <a href="" ng-click="clickedExplore = false"><h3>subscriptions</h3></a>
   </div>
-  <div id="sub-filters-container" style="text-align:center; margin-top:2em;" ng-show='clicked'>
-      <a href=""><h4>Funny</h4></a>
-      <a href=""><h4>L&D</h4></a>
-      <a href=""><h4>Town Hall</h4></a>
-      <a href=""><h4>CEO Weekly</h4></a>  
-      <a href=""><h4>IWD</h4></a>
-      <a href=""><h4>Connect</h4></a>
+
+  <div id="explore-filters-container" style="text-align:center; margin-top:2em;" ng-show='clickedExplore'>
+      <a href="" ng-click='tagFilter="funny"'><h4>Funny</h4></a>
+      <a href="" ng-click='tagFilter="LD"'><h4>L&D</h4></a>
+      <a href="" ng-click='tagFilter="town hall"'><h4>Town Hall</h4></a>
+      <a href="" ng-click='tagFilter="internal"'><h4>Internal</h4></a>  
+      <a href="" ng-click='tagFilter="funny"'><h4>Clients</h4></a>
+      <a href="" ng-click='tagFilter="connect"'><h4>Connect</h4></a>
+      <a href="" ng-click='tagFilter=undefined'> clear filters</a>
   </div>
 
   <div style='margin-left:20px' class="row">
 
-    <div class="col-md-3 video-container" ng-repeat="video in videos | filter:searchText">
+    <div class="col-md-3 video-container" ng-repeat="video in videos | filter:searchText | filter:tagFilter ">
       <a data-toggle="modal" data-target=".bd-example-modal-lg" ng-click="select($index); setVideo(video); approveResource(video.code)">
         <img class='thumbnails' src="{{video.thumbnail}}">
         <p>{{video.title}}</p>
