--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -33,7 +33,7 @@ div#filters-container h3 {
   font-weight: bold;
 }
 
-div#sub-filters-container h4 {
+div#explore-filters-container h4 {
   display: inline;
   margin:2em; 
   font-size:25px; 
